--- a/pom.xml
+++ b/pom.xml
@@ -123,10 +123,14 @@
 			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>maven-group</id>
-			<url>http://localhost:8081/repository/maven-group/</url>
-		</repository>
-	</repositories>	
+	<distributionManagement>
+        <repository>
+            <id>releases</id>
+            <url>http://localhost:8081/repository/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>http://localhost:8081/repository/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
